Signature implemented - Status responses improved - Comments improved - Signer implemented - Tweaks in swagger
